# manim-meshes

./: pyproject.toml
src/manim_meshes/: params.py
