[tool.poetry]
name = "manim-meshes"
version = "0.0.8"
description = "rendering 2D and 3D Meshes with manim for displaying and educational Purposes."
readme = "README.md"
authors = ["Brizar <martin.steinborn@stud.tu-darmstadt.de>", "99Vicky"]
keywords = ["animation", "manim", "trimeshes", "mesh"]
license = "MIT"
repository = "https://github.com/bmmtstb/manim-meshes"

[tool.poetry.dependencies]
python = "*"
decorator = "*"
manim = "0.19.0"
manimgl = "*"
ManimPango = "*"
numpy = "*"
trimesh = "*"
moderngl = "*"

[tool.poetry.dev-dependencies]
meshio = "*"
pylint = "*"
pytest = "*"
typing = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."manim.plugins"]
"manim_meshes" = "module:object.attr"
